--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -378,7 +378,7 @@ Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norweg
     ];
 
 const pogodaDnia = [
-      `<strong>Pogoda Świnoujście (05.07.2025):</strong>
+      `<br><strong>Pogoda Świnoujście (05.07.2025):</strong>
 <table class="stadium-table"><thead><tr>
 <th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
 </tr></thead><tbody><tr>
@@ -390,14 +390,163 @@ const pogodaDnia = [
 <td>24° 🌧️20%</td><td>24°</td><td>23°</td>
 <td>23°</td><td>22°</td><td>21°</td>
 <td>21°</td><td>18°</td><td>18°</td>
-</tr></tbody></table`,
-      `Pogoda Jutro`,
-      `Norwegowie mają jedno z najwyższych HDI na świecie.`,
-      `W Norwegii można podróżować koleją przez fiordy!`,
-      `Droga Trolli to jedna z najbardziej krętych tras w Europie.`,
-      `Bergen nazywane jest Bramą do Fiordów.`,
-      `Norwegia to ojczyzna nart.`,
-      `Najczystsze powietrze w Europie? W Norwegii!`
+</tr></tbody></table>`,
+      `<br><strong>Pogoda Iddefjord (06.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>13°🌙</td><td>13° 🌧️20%</td><td>13° 🌧️20%</td>
+<td>13°🌧️20%</td><td>13° 🌧️30%</td><td>13° 🌧️30%</td>
+<td>13° 🌧️20%</td><td>14° 🌧️20%</td><td>15° 🌧️20%</td>
+<td>16°🌥️</td><td>16°⛅</td><td>17°⛅</td>
+<td>18°⛅</td><td>18°⛅</td><td>18°⛅</td>
+<td>18°⛅</td><td>18°⛅</td><td>18°⛅</td>
+<td>17°⛅</td><td>16°⛅</td><td>16°⛅</td>
+<td>15°⛅</td><td>14°🌙</td><td>13°🌙</td>
+</tr></tbody></table>
+<br><strong>Pogoda Fredrikstad (06.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>14° 🌧️20%</td><td>14°☁️</td><td>14° 🌧️20%</td>
+<td>14° 🌧️20%</td><td>13° 🌧️40%</td><td>13° 🌧️40%</td>
+<td>14° 🌧️20%</td><td>15°⛅</td><td>16°⛅</td>
+<td>16°⛅</td><td>17°⛅</td><td>17°⛅</td>
+<td>18°⛅</td><td>18°⛅</td><td>18° 🌧️20%</td>
+<td>18° 🌧️20%</td><td>18°⛅</td><td>18°⛅</td>
+<td>17°⛅</td><td>17°⛅</td><td>16°⛅</td>
+<td>16°⛅</td><td>14°🌙</td><td>14°🌙</td>
+</tr></tbody></table>',
+      `<br><strong>Pogoda Oslo (07.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>
+<br><strong>Pogoda Lillehammer (07.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>`,
+      `<br><strong>Pogoda Åndalsnes (08.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>
+<br><strong>Pogoda Geiranger (08.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>`,
+      `<br><strong>Pogoda Fjærland (09.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>
+<br><strong>Pogoda Flåm (09.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>`,
+      `<br><strong>Pogoda Bergen (10.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>
+<br><strong>Pogoda Eigfjord (10.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>`,
+      `<br><strong>Pogoda Oslo (11.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>`,
+      `<br><strong>Pogoda Świnoujście (12.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+<td>°</td><td>°</td><td>°</td>
+</tr></tbody></table>`
     ];
 
     function updateDzis() {
