--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -416,7 +416,7 @@ const pogodaDnia = [
 <td>18° 🌧️20%</td><td>18°⛅</td><td>18°⛅</td>
 <td>17°⛅</td><td>17°⛅</td><td>16°⛅</td>
 <td>16°⛅</td><td>14°🌙</td><td>14°🌙</td>
-</tr></tbody></table>',
+</tr></tbody></table>`,
       `<br><strong>Pogoda Oslo (07.07.2025):</strong>
 <table class="stadium-table"><thead><tr>
 <th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
