--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -162,7 +162,9 @@ li {
     <nav>
       <button                   onclick="showSection('onorwegii')">O Norwegii</button>
       <button onclick="showSection('ciekawostki')">Ciekawostki</button>
+      <button onclick="showSection('sport')">Sport</button>
       <button onclick="showSection('plan')">Plan Wycieczki</button>
+      <button onclick="showSection('pogoda')">Pogoda</button>
       <button onclick="showSection('dzis')">Dziś</button>
     </nav>
   </header>
@@ -206,6 +208,33 @@ li {
     <li><strong>Eksport:</strong> ropa, gaz, ryby, aluminium, maszyny</li>
     <li><strong>Zasoby:</strong> ropa naftowa, gaz, energia wodna, drewno</li>
   </ul>
+</section>
+
+    <section id="ciekawostki" style="display: none;">
+      <h2>💡 Ciekawostki o Norwegii</h2>
+      <ul>
+  <li>Fiord to wąska, głęboka zatoka morska o stromych brzegach, powstała przez zalanie doliny polodowcowej. Norwegia słynie z fiordów – ma ich ponad 1 100, a wiele z nich sięga dziesiątek kilometrów w głąb lądu!</li>
+  <li>W północnej Norwegii można zobaczyć zorzę polarną nawet przez 8 miesięcy w roku, a latem słońce nie zachodzi – to zjawisko „słońca o północy”.</li>
+  <li>Język norweski występuje w dwóch wersjach: bokmål i nynorsk.</li>
+  <li>Laerdal to najdłuższy tunel drogowy na świecie – ma 24,5 km długości.</li>
+  <li>Norwegowie mają prawo swobodnego poruszania się po naturze – tzw. „allemannsretten”.</li>
+  <li>Norwegia nie jest w Unii Europejskiej, ale jako członek EOG i Schengen, obowiązują tam te same zasady roamingu i swobodnego podróżowania.</li>
+  <li>Bergen to najbardziej deszczowe miasto Europy – średnio 240 dni deszczu w roku.</li>
+  <li>W zimie obowiązkowe są opony zimowe lub z kolcami – także dla autobusów i ciężarówek.</li>
+  <li>Norwegowie mają własne słowo na przytulny nastrój: „koselig”.</li>
+  <li>Norwegia była pierwszym krajem, który zakazał wycinania lasów tropikalnych w ramach polityki klimatycznej i słynie z ekologii i recyklingu.</li>
+  <li>W szkołach dzieci uczą się jeździć na nartach – to narodowy sport.</li>
+  <li>Można tam spotkać łosie spacerujące po osiedlach!</li>
+  <li>Norwegia regularnie zajmuje wysokie miejsca w rankingach jakości życia, edukacji, wolności i szczęścia.</li>
+  <li>Norwegowie piją jedną z największych ilości kawy na świecie.</li>
+<li>W Norwegii zawód nauczyciela jest jednym z najbardziej szanowanych w społeczeństwie – traktowany jest podobnie jak zawody lekarza czy prawnika.</li>
+<li>Aby zostać nauczycielem w Norwegii, trzeba ukończyć pięcioletnie studia magisterskie – obejmujące zarówno przedmiot, jak i pedagogikę.</li>
+<li>Nauczyciele w Norwegii mają dużą autonomię – sami wybierają metody nauczania, a ich relacje z uczniami są partnerskie i oparte na wzajemnym zaufaniu.</li>
+</ul>
+    </section>
+
+    <section id="sport" style="display: none;">
+      <h2>Sport</h2>
 <h3>⚽ Znani Sportowcy</h3>
 <ul>
   <li><strong>Erling Haaland:</strong> Piłka nożna – napastnik Manchester City. Król strzelców Premier League 2022/23, zdobywca Ligi Mistrzów 2023.</li>
@@ -284,29 +313,6 @@ li {
             <tr><td>Øster Hus Arena</td><td>Sandnes</td><td>Sandnes Ulf</td><td>6 043</td></tr>
         </tbody>
     </table>
-</section>
-
-    <section id="ciekawostki" style="display: none;">
-      <h2>💡 Ciekawostki o Norwegii</h2>
-      <ul>
-  <li>Fiord to wąska, głęboka zatoka morska o stromych brzegach, powstała przez zalanie doliny polodowcowej. Norwegia słynie z fiordów – ma ich ponad 1 100, a wiele z nich sięga dziesiątek kilometrów w głąb lądu!</li>
-  <li>W północnej Norwegii można zobaczyć zorzę polarną nawet przez 8 miesięcy w roku, a latem słońce nie zachodzi – to zjawisko „słońca o północy”.</li>
-  <li>Język norweski występuje w dwóch wersjach: bokmål i nynorsk.</li>
-  <li>Laerdal to najdłuższy tunel drogowy na świecie – ma 24,5 km długości.</li>
-  <li>Norwegowie mają prawo swobodnego poruszania się po naturze – tzw. „allemannsretten”.</li>
-  <li>Norwegia nie jest w Unii Europejskiej, ale jako członek EOG i Schengen, obowiązują tam te same zasady roamingu i swobodnego podróżowania.</li>
-  <li>Bergen to najbardziej deszczowe miasto Europy – średnio 240 dni deszczu w roku.</li>
-  <li>W zimie obowiązkowe są opony zimowe lub z kolcami – także dla autobusów i ciężarówek.</li>
-  <li>Norwegowie mają własne słowo na przytulny nastrój: „koselig”.</li>
-  <li>Norwegia była pierwszym krajem, który zakazał wycinania lasów tropikalnych w ramach polityki klimatycznej i słynie z ekologii i recyklingu.</li>
-  <li>W szkołach dzieci uczą się jeździć na nartach – to narodowy sport.</li>
-  <li>Można tam spotkać łosie spacerujące po osiedlach!</li>
-  <li>Norwegia regularnie zajmuje wysokie miejsca w rankingach jakości życia, edukacji, wolności i szczęścia.</li>
-  <li>Norwegowie piją jedną z największych ilości kawy na świecie.</li>
-<li>W Norwegii zawód nauczyciela jest jednym z najbardziej szanowanych w społeczeństwie – traktowany jest podobnie jak zawody lekarza czy prawnika.</li>
-<li>Aby zostać nauczycielem w Norwegii, trzeba ukończyć pięcioletnie studia magisterskie – obejmujące zarówno przedmiot, jak i pedagogikę.</li>
-<li>Nauczyciele w Norwegii mają dużą autonomię – sami wybierają metody nauczania, a ich relacje z uczniami są partnerskie i oparte na wzajemnym zaufaniu.</li>
-</ul>
     </section>
 
     <section id="plan" style="display: none;">
@@ -329,11 +335,14 @@ Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norweg
       </ul>
     </section>
 
+    <section id="pogoda" style="display: none;">
+      <h2>Pogoda</h2>
+    </section>
+
     <section id="dzis" style="display: none;">
       <h2>Dziś</h2>
       <div id="dzien"></div>
       <div id="ciekawostkaDnia"></div>
-      <div id="pogodaDnia"></div>
     </section>
   </main>
 
