--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -32,6 +32,7 @@
 
     nav button {
       background: #ffffff;
+      width: 80px;
       border: 2px solid #003153;
       padding: 0.5rem 0.5rem;
       margin: 0.2rem;
@@ -337,6 +338,71 @@ Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norweg
 
     <section id="pogoda" style="display: none;">
       <h2>Pogoda</h2>
+<strong>Pogoda Świnoujście (05.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>17°</td><td>17°</td><td>16°</td>
+<td>16°</td><td>16°</td><td>17°</td>
+<td>18°</td><td>19°</td><td>20°</td>
+<td>22°</td><td>23°</td><td>23°</td>
+<td>24°</td><td>23°</td><td>23° 🌧️20%</td>
+<td>24° 🌧️20%</td><td>24°</td><td>23°</td>
+<td>23°</td><td>22°</td><td>21°</td>
+<td>21°</td><td>18°</td><td>18°</td>
+</tr></tbody></table>
+      <br><strong>Pogoda Iddefjord (06.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>13°🌙</td><td>13° 🌧️20%</td><td>13° 🌧️20%</td>
+<td>13°🌧️20%</td><td>13° 🌧️30%</td><td>13° 🌧️30%</td>
+<td>13° 🌧️20%</td><td>14° 🌧️20%</td><td>15° 🌧️20%</td>
+<td>16°🌥️</td><td>16°⛅</td><td>17°⛅</td>
+<td>18°⛅</td><td>18°⛅</td><td>18°⛅</td>
+<td>18°⛅</td><td>18°⛅</td><td>18°⛅</td>
+<td>17°⛅</td><td>16°⛅</td><td>16°⛅</td>
+<td>15°⛅</td><td>14°🌙</td><td>13°🌙</td>
+</tr></tbody></table>
+<br><strong>Pogoda Fredrikstad (06.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>14° 🌧️20%</td><td>14°☁️</td><td>14° 🌧️20%</td>
+<td>14° 🌧️20%</td><td>13° 🌧️40%</td><td>13° 🌧️40%</td>
+<td>14° 🌧️20%</td><td>15°⛅</td><td>16°⛅</td>
+<td>16°⛅</td><td>17°⛅</td><td>17°⛅</td>
+<td>18°⛅</td><td>18°⛅</td><td>18° 🌧️20%</td>
+<td>18° 🌧️20%</td><td>18°⛅</td><td>18°⛅</td>
+<td>17°⛅</td><td>17°⛅</td><td>16°⛅</td>
+<td>16°⛅</td><td>14°🌙</td><td>14°🌙</td>
+</tr></tbody></table>
+      <br><strong>Pogoda Oslo (07.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>15°🌙</td><td>14°🌙</td><td>14° 🌧️20%</td>
+<td>14° 🌧️20%</td><td>13°⛅</td><td>13°⛅</td>
+<td>13°⛅</td><td>13° 🌧️20%</td><td>14° 🌧️20%</td>
+<td>14° 🌧️20%</td><td>16° 🌧️20%</td><td>17° 🌧️20%</td>
+<td>17° 🌧️20%</td><td>18° 🌧️20%</td><td>18° 🌧️20%</td>
+<td>18° 🌧️20%</td><td>18° 🌧️20%</td><td>18° 🌧️20%</td>
+<td>18°☁️</td><td>18° 🌧️40%</td><td>17° 🌧️20%</td>
+<td>17° 🌧️20%</td><td>16° 🌧️20%</td><td>16° 🌧️20%</td>
+</tr></tbody></table>
+<br><strong>Pogoda Lillehammer (07.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
+<th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+</tr></thead><tbody><tr>
+<td>10°🌙</td><td>9°🌙</td><td>9°🌙</td>
+<td>9°🌧️</td><td>9°🌧️</td><td>9°⛅</td>
+<td>11°🌧️</td><td>12°⛅</td><td>13°🌧️</td>
+<td>13°🌧️</td><td>14°🌧️</td><td>15°🌧️</td>
+<td>16°⛅</td><td>17°⛅</td><td>17°⛅</td>
+<td>18°🌧️</td><td>18°🌧️</td><td>17°⛅</td>
+<td>17°⛅</td><td>17°🌧️</td><td>16°⛅</td>
+<td>14°⛅</td><td>13°🌙</td><td>12°🌙</td>
+</tr></tbody></table>
     </section>
 
     <section id="dzis" style="display: none;">
