--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -319,20 +319,20 @@ li {
     <section id="plan" style="display: none;">
       <h2>Do Fiordów Norwegii</h2>
       <ul>
-        <li>Dzień 1:<br>Zbiórka uczestników. Przejazd do portu. Przeprawa promowa.</li><br>
-        <li>Dzień 2:<br><strong>Iddefjord - Fredrikstad (Trasa ok. 650 km)</strong><br>
+        <li>Dzień 1 (05.07.2025 Sobota):<br>Zbiórka uczestników. Przejazd do portu. Przeprawa promowa.</li><br>
+        <li>Dzień 2 (06.07.2025 Niedziela):<br><strong>Iddefjord - Fredrikstad (Trasa ok. 650 km)</strong><br>
 Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norwegią. Oba kraje łączy imponujący most Svinesund o dł. 704 m, ze wspaniałym widokiem na IDDEFJORD. Przejazd do FREDRIKSTAD. Zwiedzanie pięknie położonego miasteczka z najlepiej zachowaną fortecą w Skandynawii, Starym Miastem, Muzeum Miasta i mariną. Przejazd do hotelu. Zakwaterowanie, nocleg.</li><br>
-        <li>Dzień 3:<br><strong>Oslo - Lillehammer (Trasa ok. 400 km)</strong><br>
+        <li>Dzień 3 (07.07.2025 Poniedziałek):<br><strong>Oslo - Lillehammer (Trasa ok. 400 km)</strong><br>
 Śniadanie. Wykwaterowanie. Przejazd do OSLO, stolicy wikingów malowniczo położonej nad brzegiem Oslofjordu. Zwiedzanie Oslo z miejscowym przewodnikiem. Wizyta w Muzeum Statku Polarnego Fram, którym Roald Amundsen jako pierwszy zdobył biegun południowy. Przejazd z półwyspu Bygdøy do parku Vigelanda, gdzie można podziwiać wspaniałe rzeźby – dzieło życia sławnego artysty. Spacer po centrum miasta, gdzie znajduje się m.in. Pałac Królewski, uniwersytet, Teatr Narodowy, gmach parlamentu oraz ratusz. Czas wolny w centrum Oslo. Następnie przejazd wzdłuż brzegów jeziora Mjøsa, największego jeziora Norwegii, do LILLEHAMMER, światowej sławy ośrodka sportów zimowych. Krótki pobyt w parku olimpijskim. Przejazd doliną Gudbrandsdal wzdłuż wijącej się rzeki Lågen. Zakwaterowanie, nocleg.</li><br>
-        <li>Dzień 4:<br><strong>Norddalsfjord - droga orłów - Geirangerfjord (Trasa ok. 450 km)</strong><br>
+        <li>Dzień 4 (08.07.2025 Wtorek):<br><strong>Norddalsfjord - droga orłów - Geirangerfjord (Trasa ok. 450 km)</strong><br>
 Śniadanie. Wykwaterowanie. Przejazd malowniczą doliną Romsdalen w okolice Åndalsnes, gdzie znajduje się Ściana Trolli – znana wspinaczkowa trasa. Krótka przeprawa promowa Linge-Eidsdal przez NORDDALSFJORD. Dalsza podróż w stronę słynnej DROGI ORŁÓW i przejazd tą trasą do Geiranger – jednej z najpiękniej położonych miejscowości w Norwegii. Krótka wizyta w Miejscowości Geirnager z widokiem na GEIRANGERFJORD, wpisany na listę UNESCO, oraz piękne wodospady, które spadają do niego z dużej wysokości, tworząc oryginalny spektakl. Rejs promem po Geirangerfjordzie z Geiranger w stronę Hellesylt. Podziwianie zjawiskowych widoków i wodospadów, m.in. Siedmiu Sióstr i Zalotnika. Przejazd do hotelu w pobliżu miejscowości Forde. Zakwaterowanie, nocleg.</li><br>
-        <li>Dzień 5:<br><strong>Sognefjord - Flåm - Aurlandsfjord - Nærofjord (Trasa ok. 320 km)</strong><br>
+        <li>Dzień 5 (09.07.2025 Środa):<br><strong>Sognefjord - Flåm - Aurlandsfjord - Nærofjord (Trasa ok. 320 km)</strong><br>
 Śniadanie. Wykwaterowanie. Przejazd w stronę jęzora lodowca Jostedalsbreen-Boyabreen, a następnie do malowniczego Fjærland. Wizyta w Muzeum Lodowcowym z bardzo ciekawą wystawą multimedialną poświęconą lodowcowi Jostedalsbreen i zmianom klimatycznym. Obejrzenie 20 min filmu przedstawiającego wyprawę na lodowiec. Przejazd w stronę Sogndal, położonego nad brzegiem słynnego SOGNEFJORD, do Mannheller, stamtąd przeprawa promowa do Fodnes. W drodze do Flåm przejazd najdłuższym tunelem w Norwegii – ok. 25 km. Fakultatywnie (za dodatkową opłatą na miejscu): rejs z Flåm do Gudvangen po AURLANDSFJORD i NÆROFJORD, wpisanym na listę UNESCO – okazja do podziwiania fantastycznych widoków: malowniczo położone wioski nad fiordami, wodospady, górskie szczyty. Krótki postój w porcie w Gudvangen, następnie przejazd przez kanion Stalheim. Wizyta w punkcie widokowym, skąd można podziwiać kilkudziesięciometrowe wodospady Tvindefossen. Przejazd do Bergen – stolicy fiordów norweskich. Zakwaterowanie, nocleg.</li><br>
-        <li>Dzień 6:<br><strong>Bergen - Hardangerfjord - Hardangervidda (Trasa ok. 290 km)</strong><br>
+        <li>Dzień 6 (10.07.2025 Czwartek):<br><strong>Bergen - Hardangerfjord - Hardangervidda (Trasa ok. 290 km)</strong><br>
 Śniadanie. Wykwaterowanie. Zwiedzanie BERGEN z przewodnikiem, m.in.: popularny targ rybny i kwiatowy, stary port Bryggen ze słynnym nabrzeżem z pięknymi hanzeatyckimi domami figurującymi na liście UNESCO, stara, drewniana zabudowa Bryggen, wieża Rosenkrantza. Zwiedzanie kościoła św. Marii, najstarszego budynku w Bergen. Czas wolny lub możliwość indywidualnego wjazdu kolejką torową na górę Fløyen (320 m n.p.m.), skąd roztacza się wspaniały widok na Bergen. Dalsza podróż wzdłuż pięknego HARDANGERFJORD, przejazd przez kanion Mabødal do Fossli. Krótki postój przy Vøringsfossen – wspaniałym wodospadzie o 182-metrowym spadku wody. Przejazd przez największy górski płaskowyż Europy – HARDANGERVIDDA, następnie przez Geilo, wzdłuż rzeki Hallingdal. Przejazd do hotelu w jednej z małych, malowniczych, typowo norweskich miejscowości. Zakwaterowanie, nocleg.</li><br>
-        <li>Dzień 7:<br><strong>(Trasa ok. 800 km)</strong><br>
+        <li>Dzień 7 (11.07.2025 Piątek):<br><strong>(Trasa ok. 800 km)</strong><br>
 Śniadanie. Wykwaterowanie. Wyjazd w drogę powrotną przez Oslo, Helsingborg i Malmö. Przejazd do portu. Przeprawa promowa.</li><br>
-        <li>Dzień 8:<br>Przypłynięcie promu. Przejazd do Polski.</li>
+        <li>Dzień 8 (12.07.2025 Sobota):<br>Przypłynięcie promu. Przejazd do Polski.</li>
       </ul>
     </section>
 
