--- a/inne.html
+++ b/inne.html
@@ -10,21 +10,29 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
-            <a href="20250625_fifa.html" class="app-icon">
+            <a href="https://dawid108.github.io/dawi108/20250705_jezyknorweski.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752342386/jezyknorweski_lko97f.png" alt="Język Norweski">
+                <span>Język Norweski</span>
+            </a>
+            <a href="https://dawid108.github.io/dawi108/20250703_norwegia.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752341895/dofiordownorwegii_gnos2l.png" alt="Do Fiordów Norwegii">
+                <span>Do Fiordów Norwegii</span>
+            </a>
+            <a href="https://dawid108.github.io/dawi108/20250625_fifa.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880881/fifalogo_ewpv6l.png" alt="Turniej Fifa">
                 <span>Turniej Fifa</span>
             </a>
-            <a href="20250626_inneosiagniecia.html" class="app-icon">
+            <a href="https://dawid108.github.io/dawi108/20250626_inneosiagniecia.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750959133/inneosiagniecia_tykgty.png" alt="Inne Osiągnięcia">
                 <span>Inne Osiągnięcia</span>
             </a>
-            <a href="20250623_kregle.html" class="app-icon">
+            <a href="https://dawid108.github.io/dawi108/20250623_kregle.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750882768/kregle_vuxam4.png" alt="Kręgle">
                 <span>Kręgle</span>
             </a>
-            <a href="20250625_szkola.html" class="app-icon">
+            <a href="https://dawid108.github.io/dawi108/20250625_szkola.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750882454/szkolaklasa2_m1nj0h.png" alt="Szkola 2">
-                <span>Szkoła2</span>
+                <span>Szkoła 2</span>
             </a>
         </div>
     </div>
